--- a/Job_Portal_Application/pom.xml
+++ b/Job_Portal_Application/pom.xml
@@ -45,7 +45,12 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>net.java.dev.jna</groupId>
+            <artifactId>jna</artifactId>
+            <version>5.7.0</version>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
